--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,14 @@ uuid = "2e8d271d-f2e2-407b-a864-17eb2156783e"
 authors = ["David Anthoff <anthoff@berkeley.edu>"]
 version = "0.1.0-DEV"
 
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+[deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
 julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
