--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CancellationTokens"
 uuid = "2e8d271d-f2e2-407b-a864-17eb2156783e"
 authors = ["David Anthoff <anthoff@berkeley.edu>"]
-version = "1.0.0"
+version = "1.0.1-DEV"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
