--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,15 @@ uuid = "2e8d271d-f2e2-407b-a864-17eb2156783e"
 authors = ["David Anthoff <anthoff@berkeley.edu>"]
 version = "1.0.1-DEV"
 
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+[deps]
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [compat]
 julia = "1"
 
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+
 [targets]
-test = ["Test"]
+test = ["Test", "TestItemRunner"]
